<resources>
    <string name="app_name">智库咨询</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news_content">NewsContentActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_phone_regster">PhoneRegsterActivity</string>
    <string name="title_activity_myself_message">MyselfMessageActivity</string>
    <string name="title_activity_change_message">ChangeMessageActivity</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="title_activity_show_push_web">ShowPushWebActivity</string>
    <string name="title_activity_qqregster">QQRegsterActivity</string>
    <string name="title_activity_luntan_to_state">LuntanToStateActivity</string>

    <string name="cancel">取消</string>
    <string name="pwSubmit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hours">时</string>
    <string name="minutes">分</string>
    <string name="seconds">秒</string>


    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 上传文件 -->
    <string name="upload_title">上传附件</string>
    <string name="upload_begin">上传文件</string>
    <string name="look_pictrue">浏览</string>
    <string name="file_upload">文件上传：</string>CAASSEE
    <string name="cancel_back">返回</string>
    <string name="update">更新</string>

    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">取图</string>
    <string name="location">位置</string>
    <string name="voice">语音</string>
    <string name="emotion">表情</string>

    <string name="copyright">©Copyright 航天科技 CAASSEE</string>
    <string name="option_find_subject_math"> 标题 </string>
    <string name="option_find_subject_chinese"> 中文 </string>
    <string name="option_click_to_choose"> 选择内容 </string>

</resources>
